[gd_scene load_steps=10 format=2]

[ext_resource path="res://elementos/texto/NoticiaText-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/feed_de_noticias/SeletorDeNiveis/TemaSeletorDeLevel.tres" type="Theme" id=2]
[ext_resource path="res://recursos/feed_de_noticias/menu_opcoes_feed/MenuOpcoesEnchentefeed.gd" type="Script" id=3]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Hovered-1.png" type="Texture" id=4]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Pressed.png" type="Texture" id=5]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Menu.png" type="Texture" id=6]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Normal-4.png" type="Texture" id=7]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Pressed-2.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[node name="MenuDeOpcoesFeed" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )
voltarJogo = "res://recursos/feed_de_noticias/feed_de_noticia.tscn"

[node name="MenuDeOpcoes" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Transparencia" type="ColorRect" parent="MenuDeOpcoes"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.301961 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="TextureRect" parent="MenuDeOpcoes"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -223.0
margin_right = 260.0
margin_bottom = 223.0
mouse_filter = 0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="VolumeMusica" type="HSlider" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.488462
anchor_top = 0.11435
anchor_right = 0.851923
anchor_bottom = 0.206278
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Porcentagem" type="Label" parent="MenuDeOpcoes/Menu/VolumeMusica"]
anchor_left = 0.809524
anchor_top = -0.317073
anchor_right = 0.994709
anchor_bottom = 0.414634
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VolumeEfeitos" type="HSlider" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.488462
anchor_top = 0.237668
anchor_right = 0.851923
anchor_bottom = 0.329596
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Porcentagem" type="Label" parent="MenuDeOpcoes/Menu/VolumeEfeitos"]
anchor_left = 0.809524
anchor_top = -0.292683
anchor_right = 0.994709
anchor_bottom = 0.439024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VoltarMenuFeed" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.303846
anchor_top = 0.818386
anchor_right = 0.694231
anchor_bottom = 0.93722
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DificuldadePressionada" type="TextureRect" parent="MenuDeOpcoes/Menu"]
visible = false
anchor_left = 0.121154
anchor_top = 0.607623
anchor_right = 0.338461
anchor_bottom = 0.760089
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Transparencia" type="ColorRect" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.462
anchor_top = 0.52
anchor_right = 0.462
anchor_bottom = 0.52
margin_left = -213.24
margin_top = -76.92
margin_right = 212.76
margin_bottom = 77.08
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_up" from="MenuDeOpcoes/Menu/VoltarMenuFeed" to="." method="_on_VoltarMenuFeed_button_up"]
